k8s/service-mesh/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yas
  labels:
    istio-injection: enabled
